# imi

./:  CODE_OF_CONDUCT.md  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cliff.toml  clippy.toml  cog.toml  dist-workspace.toml  dprint.json  justfile
.agents/docs/: 00-cli-and-ux.md  01-phase-0-preflight.md  02-phase-1-topology.md  03-phase-2-exclusive.md  04-phase-3-wipe.md  05-phase-4-flash.md  06-phase-5-verify.md  07-phase-6-kernel-sync.md  08-phase-7-automount.md  09-flashguard.md  10-aligned-and-ioctls.md
.agents/docs/threading-plan/: threading-plan-phase4.md  threading-plan-phase5b.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: dependabot-automerge.yml  dependency-review.yml  release.yml  rust-audit.yml  rust-ci.yml  style-check-cocogitto.yml  style-check-dprint.yml
src/: aligned.rs  cli.rs  flash.rs  gpt.rs  guard.rs  image.rs  ioctl.rs  main.rs  mount.rs  preflight.rs  progress.rs  sysfs.rs  verify.rs
tests/: loop_pipeline.rs
